added basic kingmaker map component, limited zoom and map bounds, start zoomed onto capitol

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,16 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.navbar {
+  height: 65px;
+}
+
+#map {
+  position: fixed;
+  top: 65px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index:-1;
+}
