--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10928,3 +10928,16 @@ a.text-dark:focus {
   }
 }
 
+.navbar {
+  height: 65px;
+}
+
+#map {
+  position: fixed;
+  top: 65px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+}
+
